## Changelog

### 1.1.1
* Dev - Added compatibility with LSX Videos

### 1.1.0
* Added compatibility with LSX 2.0
* Dev - New project structure
* Dev - UIX copied from TO 1.1 + Fixed issue with sub tabs click (settings)
* Fix - Fixing the settings integration with the Tour Operator Plugin
* Fix - Fixed scripts/styles loading order
* Fix - Fixed small issues

### 1.0.4
* Dev - Added in a transient call to cache the Rates from the exchange API
* Fix - Restricted the API calls to the frontend only reducing the number of queries.

### 1.0.3
* Fix - Adjusted the plugin settings link inside the LSX API Class

### 1.0.2
* Fix - Fixed all prefixes replaces (to_ > lsx_to_, TO_ > LSX_TO_)

### 1.0.1
* Fix - Reduced the access to server (check API key status) using transients
* Fix - Made the API URLs dev/live dynamic using a prefix "dev-" in the API KEY

### 1.0.0
* First Version